// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard initial props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
        "height": 1334,
      },
      Object {
        "height": "100%",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text>
    aaa
  </Text>
</View>
`;

exports[`Dashboard isLoading = ture 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
        "height": 1334,
      },
      Object {
        "height": "100%",
        "justifyContent": "center",
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#45D56E"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "height": 80,
      }
    }
  />
</View>
`;
